@@ -1,5 +1,6 @@
 package wow.commons.util;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collector;
@@ -17,7 +18,7 @@ public final class CollectionUtil {
 					if (list.size() != 1) {
 						throw new IllegalArgumentException("" + list);
 					}
-					return list.get(0);
+					return list.getFirst();
 				}
 		);
 	}
@@ -32,9 +33,21 @@ public final class CollectionUtil {
 	public static <T> Optional<T> getUniqueResult(List<T> list) {
 		return switch (list.size()) {
 			case 0 -> Optional.empty();
-			case 1 -> Optional.of(list.get(0));
+			case 1 -> Optional.of(list.getFirst());
 			default -> throw new IllegalArgumentException("" + list);
 		};
+	}
+
+	public static <T> List<T> join(List<T> list1, List<T> list2) {
+		if (list1 == null || list1.isEmpty()) {
+			return list2;
+		}
+		if (list2 == null || list2.isEmpty()) {
+			return list1;
+		}
+		var both = new ArrayList<>(list1);
+		both.addAll(list2);
+		return both;
 	}
 
 	private CollectionUtil() {}
